--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -7,7 +7,7 @@
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
-
+    overflow: hidden; /* Evitar el desplazamiento de la página cuando la ventana de inicio de sesión o registro está abierta */
     margin: 0;
     overflow: hidden;
   }
